--- a/style.css
+++ b/style.css
@@ -341,6 +341,13 @@ color: grey;
   justify-content: space-evenly;
   
 }
+.feat-2{
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  
+}
 .left-feat{
   height: 60vh;
   width:41vw;
@@ -371,9 +378,45 @@ color: grey;
   height: 40vh;
 }
 
+/* globe-container */
 
+.globe-container{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 130px;
+  height: 100%;
+  background: #1a1a1a;
+  border-radius: 15px;
+}
+.globe-left{
+  display: flex;
+  flex-direction: column;
+}
+ .imma{
+  height: 45vh;
+  width:50vw;
+}
+.img-globe {
+  
+  height: 600px;
+  animation: spin 7s linear infinite;
+  border-radius: 50%;
+}
+.dodo{
+  color: white;
+  background: black;
+}
+/* Infinite Rotation Animation */
+@keyframes spin {
+  0% {
+    transform: rotate(78deg);
+  }
 
-
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 
 
